# final_work_console_chat

./: CMakeLists.txt  README.md  chat-client  client.cpp  main.cpp  server.cpp
src/: CMakeLists.txt
src/chat/: CMakeLists.txt  cout_color.hpp  function.cpp  function.hpp  functions.cpp  functions.hpp  iclient.hpp  interfaces.hpp  iserver.hpp  net_client.hpp  net_server.cpp  net_server.hpp  server.hpp  serverhandle.cpp  serverhandle.hpp  state.cpp  state.hpp  terminal_client.cpp  terminal_client.hpp  test.cpp
src/chat/post_envelope/: post_envelope.hpp
src/main_arg/: main_arg.hpp
src/optional_card/: CMakeLists.txt  optional_card.cpp  optional_card.hpp
